# gemini-live-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  GCP_SETUP.md  LIVEKIT_SETUP.md  README.md  agent.py  create_api_key.sh  deploy_gce.sh  flake.nix  push_secrets.sh  pyproject.toml  setup_gcp.sh
